
0.9.11:	2005-Mar-04

	* Released -fcompound-names to fix the name clashes in the code
	  produced by the asn1c.
	* X.693:8.3.4 prohibits anything but SignedNumber; fixed XER codec.
	* Fixed ENUMERATED identifier to value conversion in XER.
	  Reported by <jacque.celaire@caramail.com>.
	* Compiler is taught to produce compilable code for yet another class
	  of circular ASN.1 type references.
	* If the compiled file contents are the same as in already existing
	  file (left from previous compilation), the old file is retained.
	  This prevents thrashing `make` dependencies if amount of changes in
	  the original ASN.1 module(s) is small.

0.9.10:	2005-Feb-25

	* Completed the XER XMLValueList encoding and decoding.
	* Native integer type is now using "long".
	* Fixed #1150856. Reported by <vvvy@users.sourceforge.net>.
	* Some WIN32 portability fixes.

0.9.9:	2005-Feb-22

	* First release of XER (XML) decoding implementation (somewhat
	  experimental).
	* ANY allocation routine fixed.
	  Reported by <mikko.ahonen@elma.net>.
	* Fixed tag parsing (tags like "[ 0 ]" were not supported).
	* Compiler now checks for duplicate ASN.1 types across modules.

0.9.8:	2005-Jan-17

	* [NEW PLATFORM] Compiled and tested on Linux @ alpha64 (LP64).
	  Some code needed to be fixed regarding int-long conversions
	  (mostly inside the test suite), and floating point handling
	  code needed to be restructured to handle signalling NAN and
	  other floating point exceptions quietly. Smooth transition!
	* [NEW PLATFORM] Compiled and tested on Sun Solaris 9 @ sparc.
	  Improved includes/defines of/for system headers.
	* -X command line option added to asn1c to generate XML DTD.
	* Empty SEQUENCE and SET clauses are now allowed.
	* Removed confusion between &xNN; and &#xNN; in enber and unber.
	* Removed order dependency in DEFAULT references to ENUMERATED
	  identifiers (./tests/68-*-OK.asn1).
	* ber_dec_rval_t renamed into asn_dec_rval_t: more generality.