@@ -3,11 +3,13 @@
 
 	* Released -fcompound-names to fix the name clashes in the code
 	  produced by the asn1c.
+	* Released -fno-include-deps to avoid #including non-critical
+	  external dependencies.
+	* Compiler is taught to produce compilable code for yet another class
+	  of circular ASN.1 type references.
 	* X.693:8.3.4 prohibits anything but SignedNumber; fixed XER codec.
 	* Fixed ENUMERATED identifier to value conversion in XER.
 	  Reported by <jacque.celaire@caramail.com>.
-	* Compiler is taught to produce compilable code for yet another class
-	  of circular ASN.1 type references.
 	* If the compiled file contents are the same as in already existing
 	  file (left from previous compilation), the old file is retained.
 	  This prevents thrashing `make` dependencies if amount of changes in
